   headers)
 - [fix] memory allocation for [out, ref] parameters at server side is not
   intended
 - [fix] creation of enums
 - [fix] when using the -o option, target files were sometimes empty
 - [fix] in C/C++ parser: recognize __builtin_va_list as type not ID
 - [fix] defining C++ built-in types in C headers failed (wchar_t)
 - [fix] parsing of concatenated literal strings in C/C++ files
 - fail on deprecated -C option

3.2.1
 - [feature] new compiler option --require <string> that specifies the minimal
   version the currently running Dice has to be.
 - [feature] new #pragam require <string> with same semantic
 - [fix] rcv_any and wait_any functions have different names on client and
   server side
 - [fix] marshalling of pointer types as parameter of ipc_call did not work
 - [fix] whitespace output when parsing files using #pragma
 - [fix] make unmarshal/marshal/wait_any functions protected in generated
   server classes (C++ backend)

3.2.0
 - [feature] add L4.Fiasco backend to reflect changes in L4.Fiasco API
   (uses ipc_*_tag variants of IPC C-Bindings)
 - [feature] replace parsers with new C/C++ and IDL parsers
   * import/include changes: import for C header files, include for IDL files
     only
   * pragma force-include: to force inclusion of C header files
   * fix #352: Dice did not obey include directives
   * "string" is now IDL keyword: no longer use string as name
 - [feature] renamed long option --create-inline into --inline
 - [fix] enums are properly supported now
 - [fix] CORBA_Object was not generated with const_ prefix where possible
 - [fix] header files for non-gnu C++ compilers
 - [fix] explicetly test for C++ compiler flags to avoid errors due to missing
   or unsupported flags
 - [fix] when receiving variable number of flexpages at server, temporary
   variable was not declared; array of flexpages whas internally counted as
   one flexpage; opcode was not correctly extracted when receiving variable
   number of flexpages