@@ -172,9 +172,9 @@ ifeq ($(origin PKGDIR_OBJ),undefined)
 PKGDIR_OBJ     := $(call absfilename,$(OBJ_DIR)/$(PKGDIR))
 endif
 
-# if both are equal, we have an external package, so make up some build-dir
-# for the external package
-ifeq ($(SRC_DIR),$(OBJ_DIR))
+# if PKGDIR is not in L4DIR, we have an external package, so make up some
+# build-dir for it
+ifneq ($(patsubst $(L4DIR_ABS)/%,,$(PKGDIR_ABS)),)
 PKGDIR_OBJ     := $(OBJ_BASE)/ext-pkg$(PKGDIR_OBJ)
 OBJ_DIR        := $(OBJ_BASE)/ext-pkg$(OBJ_DIR)
 endif
