@@ -1,4 +1,4 @@
-unsigned char default_fnt[]={
+unsigned char default_fnt[] __attribute__((aligned(4))) ={
 	0xFF,0x00,0x09,0x00,0x41,0x72,0x69,0x61,0x6C,0x50,0x69,0x78,0x65,0x6C,0x00,0x76,0x4D,
 	0x69,0x61,0x53,0x63,0x68,0x49,0x44,0x3D,0x30,0x78,0x35,0x31,0x39,0x39,0x33,0x39,0x34,
 	0x44,0x00,0x00,0x00,0xFF,0x00,0x0A,0x00,0x08,0x00,0x05,0x00,0x02,0x00,0x02,0x00,0x0B,
