@@ -1,4 +1,4 @@
-unsigned char lat0_12_psf[]={
+unsigned char lat0_12_psf[] __attribute__((aligned(4))) ={
 	0x36,0x04,0x02,0x0C,0x7E,0xC3,0x99,0x99,0xF3,0xE7,0xE7,0xFF,0xE7,0xE7,0x7E,0x00,0x00,
 	0x00,0x00,0x76,0xDC,0x00,0x76,0xDC,0x00,0x00,0x00,0x00,0x6E,0xD8,0xD8,0xD8,0xD8,0xDE,
 	0xD8,0xD8,0xD8,0x6E,0x00,0x00,0x00,0x00,0x00,0x6E,0xDB,0xDB,0xDF,0xD8,0xDB,0x6E,0x00,
