@@ -1,4 +1,4 @@
-unsigned char mono_fnt[]={
+unsigned char mono_fnt[] __attribute__((aligned(4))) ={
 	0x90,0x00,0x08,0x00,0x50,0x72,0x6F,0x46,0x6F,0x6E,0x74,0x20,0x4A,0x42,0x00,0x29,0x00,
 	0x20,0x20,0x20,0x53,0x74,0x61,0x6E,0x64,0x61,0x72,0x64,0x00,0x20,0x20,0x20,0x20,0x20,
 	0x20,0x20,0x00,0x00,0xFF,0x00,0x08,0x00,0x06,0x00,0x04,0x00,0x02,0x00,0x03,0x00,0x06,
