@@ -1,7 +1,7 @@
 struct {
 	short   width,height;
 	short   pixels[16][16];
-} smallmouse_trp = {
+} smallmouse_trp __attribute__((aligned(4))) = {
 	16,16,
 	{
 		{0x738E,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000,0x0000},
