@@ -1,4 +1,4 @@
-unsigned char title_fnt[]={
+unsigned char title_fnt[] __attribute__((aligned(4))) ={
 	0x3B,0x00,0x09,0x00,0x53,0x74,0x79,0x6C,0x65,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	0x00,0x00,0x00,0x00,0xFF,0x00,0x06,0x00,0x06,0x00,0x05,0x00,0x01,0x00,0x01,0x00,0x0D,
