@@ -1,7 +1,7 @@
 PKGDIR?= ../../..
 L4DIR ?= $(PKGDIR)/../..
 
-SYSTEMS		= x86-l4v2
+SYSTEMS		= x86-l4v2 amd64-l4v2 arm-l4v2
 
 TARGET		= libc_be_socket_io.a
 
