@@ -1,7 +1,7 @@
 PKGDIR ?= ../..
 L4DIR  ?= $(PKGDIR)/../../..
 
-SYSTEMS = x86-l4v2
+SYSTEMS = x86-l4v2 amd64-l4v2 arm-l4v2
 
 TARGET  = libvt100.a
 MODE    = l4env_minimal
@@ -9,6 +9,6 @@ MODE    = l4env_minimal
 SRC_C   = color.c vt100.c buffer.c init.c cursor.c echo.c termcap.c  \
           rw.c getchar.c tabs.c insert.c keymap.c select.c
 
-WARNINGS += -Wno-pointer-sign
+WARNINGS += $(call checkcc, -Wno-pointer-sign, )
 
 include $(L4DIR)/mk/lib.mk
