@@ -10,6 +10,8 @@ x.x.x
  - [fix] in C/C++ parser: recognize __builtin_va_list as type not ID
  - [fix] defining C++ built-in types in C headers failed (wchar_t)
  - [fix] parsing of concatenated literal strings in C/C++ files
+ - [fix] parsing of compound statements as expressions (gcc C extension)
+ - [fix] parsing of casting statements
  - fail on deprecated -C option
 
 3.2.1
